# coapium

./: Cargo.toml
coapcli/: Cargo.toml
coapium/: Cargo.toml
coapium/src/: lib.rs
coapium/src/asynchronous/: client.rs  mod.rs  system.rs
coapium/src/client/: mod.rs  url.rs
coapium/src/codec/: header.rs  media_type.rs  message_id.rs  message_type.rs  mod.rs  options.rs  parsing.rs  payload.rs  token.rs  token_length.rs  url.rs  version.rs
coapium/src/codec/code/: class.rs  detail.rs  method_code.rs  mod.rs  reserved_code.rs  response_code.rs
coapium/src/codec/message/: acknowledgement.rs  delete.rs  delete_options.rs  get.rs  get_options.rs  method.rs  mod.rs  piggyback.rs  post.rs  post_options.rs  put.rs  put_options.rs  reliability.rs  request.rs  reserved.rs  reset.rs  response.rs
coapium/src/codec/option/: accept.rs  content_format.rs  decoded_option.rs  decoded_options.rs  delta.rs  delta_header.rs  encoded_option.rs  etag.rs  if_match.rs  if_none_match.rs  length.rs  length_header.rs  location_path.rs  location_query.rs  max_age.rs  mod.rs  proxy_scheme.rs  proxy_uri.rs  size1.rs  uri_host.rs  uri_path.rs  uri_port.rs  uri_query.rs  value.rs
coapium/src/protocol/: delete.rs  event.rs  get.rs  message_id_store.rs  mod.rs  new_request.rs  ping.rs  post.rs  processor.rs  put.rs  reliability.rs  request.rs  response.rs  timeout.rs  transaction_store.rs  transmission_parameters.rs
coapium/src/protocol/effect/: mod.rs  timeout.rs
coapium/src/protocol/transaction/: con.rs  mod.rs  non_con.rs
coapium/src/synchronous/: client.rs  mod.rs  system.rs
(+12 files in other folders)
